--- a/packages/FitNoteIT-frontend/fitnoteit/src/pages/register/form/registerForm.css
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/pages/register/form/registerForm.css
@@ -8,12 +8,25 @@
   background-color: #151512;
   height: calc(100vh - 140px);
 }
+.register__form::-webkit-scrollbar {
+  width: 8px !important;
+}
+.register__form::-webkit-scrollbar-thumb {
+  background-color: #b17a41 !important;
+  border-radius: 9999px !important;
+}
 @media only screen and (max-width: 950px) {
   .register__form {
     position: static;
     text-align: center;
     height: 100%;
     width: 100%;
+  }
+}
+@media only screen and (min-width: 951px) {
+  .register__form {
+    max-height: calc(100vh - 140px);
+    overflow-y: auto;
   }
 }
 .register__form-status h1 {
