--- a/packages/FitNoteIT-frontend/fitnoteit/src/components/navbar/navbar.scss
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/components/navbar/navbar.scss
@@ -25,6 +25,15 @@
     }
 
     .left,
+    .left2,
+    .right,
+    .right2 {
+      @media only screen and (max-width: 951px) {
+        display: none !important;
+      }
+    }
+
+    .left,
     .center,
     .right,
     .right2,
