--- a/packages/FitNoteIT-frontend/fitnoteit/src/pages/adminPanel/adminPanel.css
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/pages/adminPanel/adminPanel.css
@@ -46,4 +46,6 @@
 .adminPanel .MuiTable-root .MuiTablePagination-selectLabel,
 .adminPanel .MuiTable-root .MuiTablePagination-displayedRows {
   margin: 0 !important;
-}/*# sourceMappingURL=adminPanel.css.map */
+}
+
+/*# sourceMappingURL=adminPanel.css.map */
