--- a/packages/FitNoteIT-frontend/fitnoteit/src/components/recordsForm/recordsForm.css
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/components/recordsForm/recordsForm.css
@@ -3,7 +3,7 @@
 .records__form {
   width: 35vw;
   height: 74vh;
-  background: linear-gradient(59.12deg, #1E1D1D 9.53%, #090808 96.51%);
+  background: linear-gradient(59.12deg, #1e1d1d 9.53%, #090808 96.51%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: absolute;
   right: 7%;
@@ -33,6 +33,21 @@
     display: block;
     width: 100%;
     position: static;
+    padding-top: 20px;
+  }
+}
+@media only screen and (max-height: 650px) {
+  .records__form {
+    top: 100px !important;
+    height: calc(100vh - 140px) !important;
+    overflow-y: auto;
+  }
+  .records__form::-webkit-scrollbar {
+    width: 8px !important;
+  }
+  .records__form::-webkit-scrollbar-thumb {
+    background-color: #b17a41 !important;
+    border-radius: 9999px !important;
   }
 }
 .records__form-title {
@@ -58,6 +73,11 @@
     font-size: 36px;
   }
 }
+@media only screen and (max-height: 650px) {
+  .records__form-all {
+    height: calc(100vh - 140px) !important;
+  }
+}
 .records__form form {
   width: 100%;
   display: flex;
@@ -67,11 +87,13 @@
 }
 .records__form-exercise,
 .records__form .records__form-date,
+.records__form .react-datepicker__input-container,
 .records__form .records__form-weight {
-  width: 307px;
+  width: 307px !important;
 }
 .records__form-exercise p,
 .records__form .records__form-date p,
+.records__form .react-datepicker__input-container p,
 .records__form .records__form-weight p {
   font-size: 11px;
   color: rgba(143, 104, 4, 0.999);
@@ -82,6 +104,9 @@
 .records__form .records__form-date label,
 .records__form .records__form-date input,
 .records__form .records__form-date select,
+.records__form .react-datepicker__input-container label,
+.records__form .react-datepicker__input-container input,
+.records__form .react-datepicker__input-container select,
 .records__form .records__form-weight label,
 .records__form .records__form-weight input,
 .records__form .records__form-weight select {
@@ -89,12 +114,14 @@
 }
 .records__form-exercise label,
 .records__form .records__form-date label,
+.records__form .react-datepicker__input-container label,
 .records__form .records__form-weight label {
   font-size: 40px;
 }
 @media only screen and (max-height: 960px) {
   .records__form-exercise label,
   .records__form .records__form-date label,
+  .records__form .react-datepicker__input-container label,
   .records__form .records__form-weight label {
     font-size: 32px;
   }
@@ -102,18 +129,21 @@
 @media only screen and (max-width: 568px) {
   .records__form-exercise label,
   .records__form .records__form-date label,
+  .records__form .react-datepicker__input-container label,
   .records__form .records__form-weight label {
     font-size: 24px;
   }
 }
 .records__form-exercise select,
 .records__form .records__form-date select,
+.records__form .react-datepicker__input-container select,
 .records__form .records__form-weight select {
   overflow-y: auto;
   max-height: 100px;
 }
 .records__form-exercise select option,
 .records__form .records__form-date select option,
+.records__form .react-datepicker__input-container select option,
 .records__form .records__form-weight select option {
   max-height: 100px;
   overflow-y: scroll;
@@ -122,6 +152,8 @@
 .records__form-exercise select,
 .records__form .records__form-date input,
 .records__form .records__form-date select,
+.records__form .react-datepicker__input-container input,
+.records__form .react-datepicker__input-container select,
 .records__form .records__form-weight input,
 .records__form .records__form-weight select {
   width: 100% !important;
@@ -132,12 +164,26 @@
   text-align: center;
   font-size: 32px;
   margin-bottom: 5.5vh;
+  outline: none !important;
+}
+.records__form-exercise input:focus,
+.records__form-exercise select:focus,
+.records__form .records__form-date input:focus,
+.records__form .records__form-date select:focus,
+.records__form .react-datepicker__input-container input:focus,
+.records__form .react-datepicker__input-container select:focus,
+.records__form .records__form-weight input:focus,
+.records__form .records__form-weight select:focus {
+  border: none !important;
+  outline: none !important;
 }
 @media only screen and (max-height: 960px) {
   .records__form-exercise input,
   .records__form-exercise select,
   .records__form .records__form-date input,
   .records__form .records__form-date select,
+  .records__form .react-datepicker__input-container input,
+  .records__form .react-datepicker__input-container select,
   .records__form .records__form-weight input,
   .records__form .records__form-weight select {
     font-size: 24px;
@@ -149,6 +195,8 @@
   .records__form-exercise select,
   .records__form .records__form-date input,
   .records__form .records__form-date select,
+  .records__form .react-datepicker__input-container input,
+  .records__form .react-datepicker__input-container select,
   .records__form .records__form-weight input,
   .records__form .records__form-weight select {
     margin-bottom: 1.5vh;
@@ -159,6 +207,8 @@
   .records__form-exercise select,
   .records__form .records__form-date input,
   .records__form .records__form-date select,
+  .records__form .react-datepicker__input-container input,
+  .records__form .react-datepicker__input-container select,
   .records__form .records__form-weight input,
   .records__form .records__form-weight select {
     font-size: 20px;
