--- a/packages/FitNoteIT-frontend/fitnoteit/src/components/recordsForm/recordsForm.scss
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/components/recordsForm/recordsForm.scss
@@ -3,7 +3,7 @@
 .records__form {
   width: 35vw;
   height: 74vh;
-  background: linear-gradient(59.12deg, #1E1D1D 9.53%, #090808 96.51%);
+  background: linear-gradient(59.12deg, #1e1d1d 9.53%, #090808 96.51%);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   position: absolute;
   right: 7%;
@@ -29,6 +29,21 @@
     display: block;
     width: 100%;
     position: static;
+    padding-top: 20px;
+  }
+
+  @media only screen and (max-height: 650px) {
+    top: 100px !important;
+    height: calc(100vh - 140px) !important;
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+      width: 8px !important;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $gold !important;
+      border-radius: 9999px !important;
+    }
   }
 
   &-title {
@@ -53,6 +68,12 @@
     }
   }
 
+  &-all {
+    @media only screen and (max-height: 650px) {
+      height: calc(100vh - 140px) !important;
+    }
+  }
+
   form {
     width: 100%;
     display: flex;
@@ -63,8 +84,9 @@
 
   &-exercise,
   .records__form-date,
+  .react-datepicker__input-container,
   .records__form-weight {
-    width: 307px;
+    width: 307px !important;
 
     p {
       font-size: 11px;
@@ -98,7 +120,6 @@
       }
     }
 
-
     input,
     select {
       width: 100% !important;
@@ -109,6 +130,12 @@
       text-align: center;
       font-size: 32px;
       margin-bottom: 5.5vh;
+      outline: none !important;
+
+      &:focus {
+        border: none !important;
+        outline: none !important;
+      }
 
       @media only screen and (max-height: 960px) {
         font-size: 24px;
@@ -123,11 +150,10 @@
         font-size: 20px;
       }
     }
-
   }
 
   .records__form-weight input {
-    margin-bottom: 3.0vh;
+    margin-bottom: 3vh;
 
     @media only screen and (max-height: 960px) {
       margin-bottom: 1vh;
@@ -143,7 +169,6 @@
       margin-left: 33px !important;
       min-width: 40px !important;
       border-radius: 0px !important;
-
     }
   }
 
