--- a/packages/FitNoteIT-frontend/fitnoteit/src/pages/login/form/loginForm.scss
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/pages/login/form/loginForm.scss
@@ -5,7 +5,7 @@
   left: 0;
   top: 0;
   width: 30vw;
-  background-color: $background-color-form;
+  background-color: $background-color-form !important;
   height: calc(100vh - 140px);
 
   &::-webkit-scrollbar {
@@ -73,12 +73,26 @@
 
       input {
         font-family: "Oswald", sans-serif;
-        background-color: $background-color;
+        background-color: $background-color !important;
         border: none;
         color: $gold;
         width: 100%;
         margin-bottom: 90px;
         height: 45px;
+        outline: none !important;
+        padding-left: 10px;
+
+        &:-webkit-autofill {
+          background-color: $background-color !important;
+          appearance: none !important;
+          color: red !important;
+          background-image: none !important;
+        }
+
+        &:focus {
+          border: none !important;
+          outline: none !important;
+        }
       }
     }
   }
