--- a/packages/FitNoteIT-frontend/fitnoteit/src/App.css
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/App.css
@@ -1,10 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Open+Sans&display=swap");
 
 body {
-    height: 100%;
-    background-color: #151512;
-    font-family: "Bebas Neue", cursive;
-    margin: 0;
-    padding: 0;
+  height: 100%;
+  background-color: #151512;
+  font-family: "Bebas Neue", cursive;
+  margin: 0;
+  padding: 0;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:first-line,
+input:-webkit-autofill:active {
+  -webkit-box-shadow: 0 0 0 30px #1e1d1d inset !important;
+  background-color: transparent !important;
+  -webkit-text-fill-color: #b17a41;
+  -webkit-background-clip: text;
+  font-family: "Bebas Neue", cursive !important;
+}
