--- a/packages/FitNoteIT-frontend/fitnoteit/src/App.css
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/App.css
@@ -12,6 +12,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:first-line,
+input:-webkit-autofill::first-line,
 input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px #1e1d1d inset !important;
   background-color: transparent !important;
