--- a/packages/FitNoteIT-frontend/fitnoteit/src/components/availableExercises/availableExercises.scss
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/components/availableExercises/availableExercises.scss
@@ -24,6 +24,10 @@
 
     h1 {
       font-size: 48px;
+
+      @media only screen and (max-width: 500px) {
+        padding: 0 20px;
+      }
     }
   }
 
