--- a/packages/FitNoteIT-frontend/fitnoteit/src/components/plans/plans.scss
+++ b/packages/FitNoteIT-frontend/fitnoteit/src/components/plans/plans.scss
@@ -40,6 +40,14 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     padding-bottom: 0px !important;
 
+    li {
+      cursor: pointer;
+    }
+
+    li:hover {
+      color: #fcdbc6;
+    }
+
     &::-webkit-scrollbar {
       width: 8px !important;
     }
